Changes for java 12 upgrade and deprecations